--- a/src/Container/MorePage/About/Header/Header.css
+++ b/src/Container/MorePage/About/Header/Header.css
@@ -1,7 +1,7 @@
 .abouPageParent {
   /* border: 1px solid red; */
   background-image: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)),
-    url("../../../../assets/abaut\ us\ banner.jpg");
+    url("../../../../assets/abaut us banner.jpg");
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
