--- a/src/Container/HomePage/Services/Services.css
+++ b/src/Container/HomePage/Services/Services.css
@@ -22,6 +22,7 @@
 .serviceBoxes {
   position: relative;
   width: 32%;
+  /* height: 500px; */
 }
 .servicesBox {
   width: 100%;
@@ -30,6 +31,7 @@
   background-color: #fff;
   border-radius: 15px;
   box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
+  height: 450px;
 }
 .servicesBox h3 {
   font-weight: bolder;
@@ -59,17 +61,18 @@
 }
 .topLogo {
   top: -60px;
-  left: 30%;
+  left: 35%;
+  /* border: 1px solid; */
 }
 .topLogo1 {
   position: absolute;
   top: -50px;
-  right: 28%;
+  right: 33%;
 }
 .topLogo2 {
   position: absolute;
   top: -50px;
-  right: 28%;
+  right: 33%;
 }
 @media only screen and (max-width: 990px) {
   .serviceBoxes {
