--- a/src/Container/HomePage/Services/Services.css
+++ b/src/Container/HomePage/Services/Services.css
@@ -94,11 +94,12 @@
 }
 @media only screen and (max-width: 700px) {
   .topLogo {
-    left: 38%;
+    left: 36%;
   }
   .topLogo1,
   .topLogo2 {
-    right: 37%;
+    right: 34%;
+    /* border: 1px solid red; */
   }
 }
 @media only screen and (max-width: 490px) {
