--- a/src/Container/ContactPage/ContactBottom/ContactBottom.css
+++ b/src/Container/ContactPage/ContactBottom/ContactBottom.css
@@ -13,7 +13,10 @@
   padding-left: 15px;
   padding-right: 15px;
 }
+.odometerCounter{
+  text-align: center;
 
+}
 .container {
   width: 100%;
   padding-right: 15px;
