--- a/src/Container/HomePage/AboutTheme/AboutSection2.css
+++ b/src/Container/HomePage/AboutTheme/AboutSection2.css
@@ -8,12 +8,13 @@
 }
 .abtParent {
   display: flex;
-  flex-wrap: wrap;
+  /* flex-wrap: wrap; */
   justify-content: center;
 }
 .aboutCont1 {
-  width: 45%;
+  /* width: 30%; */
   padding: 10px;
+  /* border: 1px solid red; */
 }
 .paraTextAbout2 {
   color: whitesmoke;
@@ -32,7 +33,8 @@
   text-decoration: underline;
 }
 .aboutCont2 {
-  width: 50%;
+  /* width: 15%; */
+  /* border: 1px solid red; */
 }
 
 .percentText {
@@ -41,14 +43,15 @@
   color: #fff;
   font-weight: bolder;
   font-size: 0.7rem;
-  width: 70%;
+  width: 100%;
+  /* border: 1px solid orange; */
 }
 .percentText span {
   position: absolute;
-  right: 30%;
+  right: 20%;
 }
 .percContainer {
-  width: 70%;
+  width: 10 0%;
   border: 2px solid #3a71d7;
   height: 15px;
   border-radius: 30px;
@@ -59,6 +62,27 @@
   border: #3a71d7;
   height: 12px;
   border-radius: 30px;
+  transition: 1s;
+}
+.setWidth {
+  width: 95%;
+  background-color: #3a71d7;
+  border: #3a71d7;
+  height: 12px;
+  border-radius: 30px;
+  transition: 2s;
+}
+.setGraphicAndWeb {
+  width: 90%;
+  background-color: #3a71d7;
+  border: #3a71d7;
+  height: 12px;
+  border-radius: 30px;
+  transition: 2s;
+}
+.scrollProges{
+  width: 50%;
+
 }
 @media only screen and (max-width: 670px) {
   .abtParent {
