--- a/src/Container/ContactPage/SendMessage/SendMessage.css
+++ b/src/Container/ContactPage/SendMessage/SendMessage.css
@@ -83,7 +83,7 @@ p {
   width: 150px;
 }
 @media only screen and (max-width: 767px) {
-  */ .contact-page .section-title__title {
+   .contact-page .section-title__title {
     font-size: 30px;
     line-height: 40px;
   }
