--- a/src/Container/HomePage/HeaderContent/header.css
+++ b/src/Container/HomePage/HeaderContent/header.css
@@ -25,6 +25,9 @@
   transition: 0.6s;
   font-weight: bold;
 }
+.emailText{
+  color: white !important;
+}
 
 @media only screen and (max-width: 530px) {
   .headerContent .text {
