--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -44,7 +44,10 @@
   display: flex;
 }
 .footeIconBox ul li {
-  margin: 0 5px;
+  margin: 0 5px; 
+  position: relative;
+  right: 25px;
+  
 }
 .footeIconBox ul li i {
   color: #fff;
