--- a/src/Container/MorePage/Team/TeamCards/TeamCards.css
+++ b/src/Container/MorePage/Team/TeamCards/TeamCards.css
@@ -7,6 +7,7 @@
   justify-content: center;
   align-items: center;
   border-radius: 10px;
+  /* width: 00px; */
   background-color: #e3e3e3;
 }
 .teamCardBox h3 {
@@ -19,7 +20,7 @@
   width: 95%;
   bottom: -20px;
   position: absolute;
-  left: 8px;
+  left: 13px;
 }
 .iconBox i {
   font-size: 1.5rem;
