--- a/src/Container/MorePage/Team/TeamCards/TeamCards.css
+++ b/src/Container/MorePage/Team/TeamCards/TeamCards.css
@@ -1,3 +1,7 @@
+.teamParent {
+  display: flex;
+  justify-content: center;
+}
 .cardParent {
   position: relative;
 }
@@ -20,7 +24,7 @@
   width: 95%;
   bottom: -20px;
   position: absolute;
-  left: 13px;
+  left: 14px;
 }
 .iconBox i {
   font-size: 1.5rem;
@@ -44,4 +48,23 @@
   font-size: 0.9rem;
   font-weight: bold;
   color: gray;
+}
+@media only screen and (max-width: 992px) {
+  .teamParent {
+    flex-direction: column;
+  }
+  .iconBox {
+    left: 15px;
+  }
+}
+
+@media only screen and (max-width: 768px) {
+  .iconBox {
+    left: 12px;
+  }
+}
+@media only screen and (max-width: 450px) {
+  .iconBox {
+    left: 10px;
+  }
 }
