--- a/src/Container/MorePage/Faq/FaqForm/FaqForm.css
+++ b/src/Container/MorePage/Faq/FaqForm/FaqForm.css
@@ -9,7 +9,7 @@
   border-radius: 40px;
   background-color: #f1f1f5;
   margin: 10px 10px;
-  padding: 20px;
+  padding: 10px 20px;
   width: 350px;
   outline: none;
 }
@@ -30,10 +30,11 @@
   padding: 20px;
 }
 .faqFormBox button{
-  padding: 20px 30px;
+  padding: 8px 20px;
   color: #fff;
   background-color: #1367D5;
   border: none;
+  font-size: 0.9rem;
   border-radius: 30px;
 }
 .faqFormBox button:hover{
