--- a/src/components/Slider/Slider.css
+++ b/src/components/Slider/Slider.css
@@ -2,6 +2,7 @@
   width: 100%;
   height: 250px;
   padding: 10px;
+
 }
 .imgSlider {
   opacity: 0.5 !important;
@@ -13,9 +14,18 @@
   border-radius: 10%;
   opacity: 1 !important;
 }
+.textheading{
+  font-size: 25px;
+  /* border-bottom: 1px solid #1166D4; */
+  color: gray;
+  font-style: italic;
+  font-weight: bolder;
+  max-width: 280px;
+  margin: 0 auto;
+}
 @media only screen and (max-width: 1050px) {
   .imgSlider {
-    width: 30%;
+    width: 90%;
   }
   .imgBox {
   }
